# parley

./: .dockerignore  .gitignore  AUDIT.md  Dockerfile  PRIVACY.md  README.md  TODO.md  TOS.md  deploy-frontend.sh  docker-compose.yml  go.mod  go.sum  terraform.tfstate  todo.md
.github/workflows/: deploy.yml  desktop-linux.yml  desktop-macos.yml  desktop-windows.yml  govulncheck.yml  infra.yml  python-client.yml  release.yml
admin-frontend/: index.html  package-lock.json  package.json
admin-frontend/src/: App.tsx  api.ts  config.ts  index.css
bench/: go.mod
cmd/admin/: handlers.go  handlers_test.go  helpers.go  main.go  middleware.go  server.go  server_test.go
cmd/api/: auth_handlers.go  bench_handlers_prod.go  bench_handlers_stresstest.go  desktop_auth_handlers.go  developer_handlers.go  giphy_handler.go  helpers.go  invite_handlers.go  main.go  middleware.go  middleware_test.go  passkey_handlers.go  passkey_handlers_test.go  read_state_handlers.go  routes.go  typing_handler.go  upload_handler.go  user_handlers.go  user_status_handler.go  websocket_handler.go  websocket_handler_test.go  ws_ticket.go
desktop/: package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  Credits.rtf  Info.plist  tauri.conf.json  tauri.ios.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs  ring_window.rs
docs/: authentication.md  bots.md  index.md  limits.md  package-lock.json  package.json  selfbots.md  theming.md
docs/.vitepress/: config.ts
docs/endpoints/: channels.md  developer.md  dms.md  messages.md  servers.md  users.md  voice.md  websocket.md
docs/plans/: 2026-03-15-bin-channels.md  2026-03-15-permissions-overhaul.md
docs/security/: 2026-04-23-adversarial-audit.md
docs/specs/: 2026-03-15-bin-channels-design.md  2026-03-15-permissions-overhaul-design.md  2026-04-28-github-integration-design.md  2026-04-28-gitwise-devbox-vision.md  2026-04-29-phase-a-ai-dev-platform.md
extras/dmz-proxy/: 403.html
extras/grafana/: parley-perf.json
extras/parley/: CHANGELOG.md  __init__.py  client.py  enums.py  errors.py  gateway.py  http.py  pyproject.toml  slash.py  state.py  utils.py
extras/parley/ext/: __init__.py
extras/parley/ext/commands/: __init__.py  bot.py  cog.py  context.py  core.py  errors.py
extras/parley/ext/tasks/: __init__.py
extras/parley/models/: __init__.py  bin.py  channel.py  dm.py  friend.py  invite.py  member.py  message.py  notification.py  overwrite.py  passkey.py  role.py  server.py  soundboard.py  theme.py  user.py  voice.py
extras/parley/tests/: test_smoke.py
extras/selfbot/: .env.example  README.md  main.py  requirements.txt
extras/themes/: claude.css
frontend/: .env  Dockerfile  index.html  package-lock.json  package.json  ring.html  vite.config.ts
frontend/public/: theme-init.js
frontend/src/: App.tsx  config.ts  index.css  main.tsx  vite-env.d.ts
internal/account/: errors.go  export_handler.go  export_service.go  export_test.go  handler.go  service.go  service_test.go
internal/ai/: client.go  models.go  queue.go  queue_test.go  worker.go
internal/audit/: service.go
internal/auth/: banned_passwords.go  banned_passwords_test.go  config.go  cookie.go  middleware.go  middleware_test.go  scopes.go  scopes_test.go  service.go  service_test.go  test_init_test.go
internal/botcommands/: handler.go  models.go  repository.go  service.go  service_test.go
internal/bots/: ai_dispatch.go  handler.go  models.go  repository.go  service.go  service_test.go
internal/cache/: membership.go  membership_test.go  (+1 more)
nsfw-service/: index.js  package.json
scripts/: deploy-api.sh  deploy-frontend.sh
terraform/: .env.example  README.md  main.tf  outputs.tf  terraform.tfstate.1773502816.backup  terraform.tfstate.1773503809.backup  terraform.tfvars.example  userdata-admin.sh  userdata-api.sh  userdata-db.sh  userdata-lb.sh  userdata-minio.sh  userdata-vc.sh  variables.tf
(+463 files in other folders)
