[package]
name = "parley-desktop"
version = "0.5.3"
description = "Parley desktop client"
authors = ["Dylan Hart"]
edition = "2021"

[lib]
name = "parley_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "devtools", "tray-icon", "image-png"] }
# Pinned to 2.2.0 — iOS `open()` regressed in 2.2.1+
# (tauri-apps/plugins-workspace#2781). JS companion is pinned to match.
tauri-plugin-shell = "=2.2.0"
tauri-plugin-deep-link = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
